--- a/app/Src/MainScreen1.fx.yaml
+++ b/app/Src/MainScreen1.fx.yaml
@@ -44,7 +44,7 @@ MainScreen1 As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.Created
+            Text: = Text(ThisItem.Created,"dd-mmm-yyyy")
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 104
             X: =32
